--- a/index-1.html
+++ b/index-1.html
@@ -4,7 +4,8 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" media="all and (max-width: 480px)">
     <link rel="stylesheet" href="styles.css" media="all and (max-width: 600px)">
     <meta charset="utf-8">
@@ -36,8 +37,8 @@
     <section class="banner">
         <div class="banner-text container">
             <p class="collection ">NEW COLLECTION</p>
-            
-            <p class="season heading">Spring/Summer 2016</p>
+
+            <p class="season heading">Spring/Summer <span class="mobile-wrap">2016</span></p>
         </div>
     </section>
 
@@ -47,7 +48,7 @@
             <p class="styles heading"><span class="italic">Hand-Crafted</span> <span class="focus">Styles</span></p>
         </div>
         <div>
-            <h3 class="description">Aloha Apparel Co. sells only the finest ready-to-travel clothing. Browse our <br>
+            <h3 class="description">Aloha Apparel Co. sells only the finest ready-to-travel clothing. Browse our
                 current selection of
                 products or sign-up for updates below.</h3>
         </div>
@@ -119,7 +120,7 @@
                 <h4 class="updates heading"><span class="italic">Sign-up for </span><span class="focus">Updates</span></h4>
             </div>
             <div class="subscription-info">
-                <p>Stay updated on our latest product releases, be the first to find out about <br>upcoming sales, and get
+                <p>Stay updated on our latest product releases, be the first to find out about upcoming sales, and get
                     free style tips from our blog. Unsubscribe at any time.</p>
             </div>
             <div>
@@ -143,7 +144,7 @@
                 <br>
                 <p>604-604-6040. info@alohaapparel.com</p>
             </div>
-                <br><br>
+            <br><br>
             <div class="address">
                 <p>1490 W Broadway</p>
                 <br>
@@ -154,7 +155,7 @@
         <!--must include links for li and logos-->
         <!--Right side of footer-->
         <div class="media">
-            <ul>
+            <ul class="media-list">
                 <li><i class="fab fa-facebook-f"></i><a href="#">Facebook</a></li>
                 <li><i class="fab fa-twitter"></i><a href="#">Twitter</a></li>
                 <li><i class="fab fa-instagram"></i><a href="#">Instagram</a></li>
