--- a/index-1.html
+++ b/index-1.html
@@ -1,170 +1,231 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
 
-<head>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css" media="all and (max-width: 480px)">
-    <link rel="stylesheet" href="styles.css" media="all and (max-width: 600px)">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./flickity.css">
+  
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Aloha Apparel Co.</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="site-header">
-        <div class="logo">
-            <img src="images/aloha-logo.svg" alt="Aloha Apparel Co. logo">
-        </div>
+      <div class="logo">
+        <img src="images/aloha-logo.svg" alt="Aloha Apparel Co. logo" />
+      </div>
 
-        <nav class="main-navigation container">
-            <ul class="list">
-                <li> <a href="#about">About</a></li>
-                <li> <a href="#shop">Shop</a></li>
-                <li> <a href="#featured">Featured</a></li>
-                <li> <a href="#newsletter">Updates</a></li>
-            </ul>
-        </nav>
+      <nav class="main-navigation container">
+        <ul class="list">
+          <li><a href="#about">About</a></li>
+          <li><a href="#shop">Shop</a></li>
+          <li><a href="#featured">Featured</a></li>
+          <li><a href="#newsletter">Updates</a></li>
+        </ul>
+      </nav>
 
-        <div class="cart">
-            <img src="images/cart-icon.svg" class="cart-img" alt="Shopping Cart">
-        </div>
+      <div class="cart">
+        <img src="images/cart-icon.svg" class="cart-img" alt="Shopping Cart" />
+      </div>
     </header>
 
-
     <section class="banner">
-        <div class="banner-text container">
-            <p class="collection ">NEW COLLECTION</p>
+      <div class="banner-text container">
+        <p class="collection ">NEW COLLECTION</p>
 
-            <p class="season heading">Spring/Summer <span class="mobile-wrap">2016</span></p>
-        </div>
+        <p class="season heading">
+          Spring/Summer <span class="mobile-wrap">2016</span>
+        </p>
+      </div>
     </section>
-
 
     <section class="about container">
-        <div>
-            <p class="styles heading"><span class="italic">Hand-Crafted</span> <span class="focus">Styles</span></p>
-        </div>
-        <div>
-            <h3 class="description">Aloha Apparel Co. sells only the finest ready-to-travel clothing. Browse our
-                current selection of
-                products or sign-up for updates below.</h3>
-        </div>
+      <div>
+        <p class="styles heading">
+          <span class="italic">Hand-Crafted</span>
+          <span class="focus">Styles</span>
+        </p>
+      </div>
+      <div>
+        <h3 class="description">
+          Aloha Apparel Co. sells only the finest ready-to-travel clothing.
+          Browse our current selection of products or sign-up for updates below.
+        </h3>
+      </div>
     </section>
 
-
     <section class="products">
-        <div>
-            <ul>
-                <li class="first mens top">Men's</li>
-                <li class="second trends top">Trends</li>
-                <li class="second glasses top">Glasses</li>
-                <li class="first sales">Sales</li>
-                <li class="first bags">Bags</li>
-                <li class="second womens">Women's</li>
-            </ul>
-        </div>
+      <div>
+        <ul>
+          <li class="first mens top">Men's</li>
+          <li class="second trends top">Trends</li>
+          <li class="second glasses top">Glasses</li>
+          <li class="first sales">Sales</li>
+          <li class="first bags">Bags</li>
+          <li class="second womens">Women's</li>
+        </ul>
+      </div>
     </section>
 
     <section class="featured">
-        <div class="container">
-            <h3 class="heading"><span class="italic">Most-Loved </span><span class="focus">Products</span></h3>
-        </div>
+      <div class="container">
+        <h3 class="heading">
+          <span class="italic">Most-Loved </span
+          ><span class="focus">Products</span>
+        </h3>
+      </div>
 
-        <div class="container heading product-all">
-            <div class="product ">
-                <img src="images/checked-stretch-dress.jpg" alt="Checked Stretch Dress">
+      <div class="container heading product-all">
+         <div class="product ">
+                 <img
+                 src="images/checked-stretch-dress.jpg"
+                 alt="Checked Stretch Dress"
+                />
                 <h4 id="name">Dresses</h4>
-                <br>
+                <br />
                 <p>Checked Stretch Dress</p>
-                <br>
+                <br />
                 <h4>$129.00</h4>
             </div>
 
             <div class="product">
-                <img src="images/blue-hipster-backpack.jpg" alt="Blue Hipster Backpack">
+                 <img
+                    src="images/blue-hipster-backpack.jpg"
+                    alt="Blue Hipster Backpack"
+                />
                 <h4 id="name">Bags</h4>
-                <br>
+                <br />
                 <p>Blue Hipster Backpack</p>
-                <br>
+                <br />
                 <h4>$69.00</h4>
             </div>
 
             <div class="product">
-                <img src="images/demin-overall-shorts.jpg" alt="Denim Overall Shorts">
+                <img
+                 src="images/demin-overall-shorts.jpg"
+                    alt="Denim Overall Shorts"
+                />
                 <h4 id="name">Denim</h4>
-                <br>
+                <br />
                 <p>Denim Overall Shorts</p>
-                <br>
+                <br />
                 <h4>$89.00</h4>
             </div>
 
             <div class="product">
-                <img src="images/pink-dotted-dress.jpg" alt="Pink Dotted Dress">
+                <img src="images/pink-dotted-dress.jpg" alt="Pink Dotted Dress" />
                 <h4 id="name">Dresses</h4>
-                <br>
+                <br />
                 <p>Pink Dotted Dress</p>
-                <br>
+                <br />
                 <h4>$99.00</h4>
-
             </div>
 
-        </div>
+            <div class="product">
+                <img src="images/cotton-yellow-tshirt.jpg" alt="Yellow Cotton TShirt" />
+                <h4 id="name">T-Shirts</h4>
+                <br />
+                <p>Yellow T-Shirt</p>
+                <br />
+                <h4>$30.00</h4>
+            </div>
+
+            <div class="product">
+                <img src="images/cotton-blue-shirt.jpg" alt="Blue Cotton Shirt" />
+                <h4 id="name">Button-Up Shirt</h4>
+                <br />
+                <p>Blue Cotton Shirt</p>
+                <br />
+                <h4>$50.00</h4>
+            </div>
+
+            <div class="product">
+                <img src="images/blue-silk-dress.jpg" alt="Blue Silk Dress" />
+                <h4 id="name">Dresses</h4>
+                <br />
+                <p>Blue Silk Dress</p>
+                <br />
+                <h4>$99.00</h4>
+            </div>
+      </div>
     </section>
 
     <section class="newsletter">
-        <div class="container footer-position">
-            <div>
-                <h4 class="updates heading"><span class="italic">Sign-up for </span><span class="focus">Updates</span></h4>
-            </div>
-            <div class="subscription-info">
-                <p>Stay updated on our latest product releases, be the first to find out about upcoming sales, and get
-                    free style tips from our blog. Unsubscribe at any time.</p>
-            </div>
-            <div>
-                <form action="submit.php" method="get" class="sign-up-form">
-                    <input type="email" name="email" id="email" placeholder="Your Email">
-                    <input type="submit" name="email" value="Subscribe">
-                </form>
-            </div>
+      <div class="container footer-position">
+        <div>
+          <h4 class="updates heading">
+            <span class="italic">Sign-up for </span
+            ><span class="focus">Updates</span>
+          </h4>
         </div>
-
+        <div class="subscription-info">
+          <p>
+            Stay updated on our latest product releases, be the first to find
+            out about upcoming sales, and get free style tips from our blog.
+            Unsubscribe at any time.
+          </p>
+        </div>
+        <div>
+          <form action="submit.php" method="get" class="sign-up-form">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Your Email"
+              class="mail"
+              
+            />
+            <input type="submit" name="email" value="Subscribe" class="sub" />
+          </form>
+        </div>
+      </div>
     </section>
 
-
     <footer class="site-footer">
-        <div class="footer-info">
-            <!--Left side of footer-->
-            <div class="footer-contact">
-                <p>&copy; 2016 Aloha Apparel Co.</p>
-                <br>
-                <p>Powered by HTML and CSS.</p>
-                <br>
-                <p>604-604-6040. info@alohaapparel.com</p>
-            </div>
-            <br><br>
-            <div class="address">
-                <p>1490 W Broadway</p>
-                <br>
-                <p>Vancouver, BC, Canada</p>
-            </div>
+      <div class="footer-info">
+        <!--Left side of footer-->
+        <div class="footer-contact">
+          <p>&copy; 2016 Aloha Apparel Co.</p>
+          <br />
+          <p>Powered by HTML and CSS.</p>
+          <br />
+          <p>604-604-6040. info@alohaapparel.com</p>
         </div>
-
-        <!--must include links for li and logos-->
-        <!--Right side of footer-->
-        <div class="media">
-            <ul class="media-list">
-                <li><i class="fab fa-facebook-f"></i><a href="#">Facebook</a></li>
-                <li><i class="fab fa-twitter"></i><a href="#">Twitter</a></li>
-                <li><i class="fab fa-instagram"></i><a href="#">Instagram</a></li>
-                <li><i class="fab fa-pinterest"></i><a href="#">Pinterest</a></li>
-                <li><i class="fab fa-google-plus-g"></i><a href="#">Google+</a></li>
-            </ul>
+        <br /><br />
+        <div class="address">
+          <p>1490 W Broadway</p>
+          <br />
+          <p>Vancouver, BC, Canada</p>
         </div>
+      </div>
 
+      <!--must include links for li and logos-->
+      <!--Right side of footer-->
+      <div class="media">
+        <ul class="media-list">
+          <li><i class="fab fa-facebook-f"></i><a href="#">Facebook</a></li>
+          <li><i class="fab fa-twitter"></i><a href="#">Twitter</a></li>
+          <li><i class="fab fa-instagram"></i><a href="#">Instagram</a></li>
+          <li><i class="fab fa-pinterest"></i><a href="#">Pinterest</a></li>
+          <li><i class="fab fa-google-plus-g"></i><a href="#">Google+</a></li>
+        </ul>
+      </div>
     </footer>
 
+    <script type="text/javascript" src="./jquery.js"> </script>
+    <script type="text/javascript"   src="./flickity.js"> </script> 
+    <script type="text/javascript" src="./aloha.js"></script>
 
-</body>
+  </body>
+</html>
