--- a/index-1.html
+++ b/index-1.html
@@ -30,8 +30,8 @@
         <ul class="list">
           <li><a href="#about">About</a></li>
           <li><a href="#shop">Shop</a></li>
-          <li><a href="#featured">Featured</a></li>
-          <li><a href="#newsletter">Updates</a></li>
+          <li><a href="#featured2">Featured</a></li>
+          <li><a href="#newsletter2">Updates</a></li>
         </ul>
       </nav>
 
@@ -50,7 +50,7 @@
       </div>
     </section>
 
-    <section class="about container">
+    <section id="about" class="about container">
       <div>
         <p class="styles heading">
           <span class="italic">Hand-Crafted</span>
@@ -65,7 +65,7 @@
       </div>
     </section>
 
-    <section class="products">
+    <section id="shop" class="products">
       <div>
         <ul>
           <li class="first mens top">Men's</li>
@@ -78,7 +78,7 @@
       </div>
     </section>
 
-    <section class="featured">
+    <section class="featured" id="featured2">
       <div class="container">
         <h3 class="heading">
           <span class="italic">Most-Loved </span
@@ -161,7 +161,7 @@
       </div>
     </section>
 
-    <section class="newsletter">
+    <section class="newsletter" id="newsletter2">
       <div class="container footer-position">
         <div>
           <h4 class="updates heading">
