--- a/index-1.html
+++ b/index-1.html
@@ -40,12 +40,12 @@
       </div>
     </header>
 
-    <section class="banner">
+    <section class="banner background">
       <div class="banner-text container">
-        <p class="collection ">NEW COLLECTION</p>
+        <p class="collection ">New Collection</p>
 
         <p class="season heading">
-          Spring/Summer <span class="mobile-wrap">2016</span>
+          Spring/Summer <span class="mobile-wrap">2019</span>
         </p>
       </div>
     </section>
@@ -68,12 +68,12 @@
     <section id="shop" class="products">
       <div>
         <ul>
-          <li class="first mens top">Men's</li>
-          <li class="second trends top">Trends</li>
-          <li class="second glasses top">Glasses</li>
-          <li class="first sales">Sales</li>
-          <li class="first bags">Bags</li>
-          <li class="second womens">Women's</li>
+          <li class="first mens top"><a href="#"><span>Men's</span></a></li>
+          <li class="second trends top"><a href="#"><span>Trends</span></a></li>
+          <li class="second glasses top"><a href="#"><span>Glasses</span></a></li>
+          <li class="first sales"><a href="#"><span>Sales</span></a></li>
+          <li class="first bags"><a href="#"><span>Bags</span></a></li>
+          <li class="second womens"><a href="#"><span>Women's</span></a></li>
         </ul>
       </div>
     </section>
@@ -177,7 +177,7 @@
           </p>
         </div>
         <div>
-          <form action="submit.php" method="get" class="sign-up-form">
+          <form action="#" method="get" class="sign-up-form">
             <input
               type="email"
               name="email"
@@ -214,11 +214,11 @@
       <!--Right side of footer-->
       <div class="media">
         <ul class="media-list">
-          <li><i class="fab fa-facebook-f"></i><a href="#">Facebook</a></li>
-          <li><i class="fab fa-twitter"></i><a href="#">Twitter</a></li>
-          <li><i class="fab fa-instagram"></i><a href="#">Instagram</a></li>
-          <li><i class="fab fa-pinterest"></i><a href="#">Pinterest</a></li>
-          <li><i class="fab fa-google-plus-g"></i><a href="#">Google+</a></li>
+          <li><i class="fab fa-facebook-f"></i><a href="#">  <span>Facebook</span></a></li>
+          <li><i class="fab fa-twitter"></i><a href="#">  <span>Twitter</span></a></li>
+          <li><i class="fab fa-instagram"></i><a href="#">  <span>Instagram</span></a></li>
+          <li><i class="fab fa-pinterest"></i><a href="#">  <span>Pinterest</span></a></li>
+          <li><i class="fab fa-google-plus-g"></i><a href="#"><span>Google+</span></a></li>
         </ul>
       </div>
     </footer>
