--- a/index-1.html
+++ b/index-1.html
@@ -226,6 +226,7 @@
     <script type="text/javascript" src="./jquery.js"> </script>
     <script type="text/javascript"   src="./flickity.js"> </script> 
     <script type="text/javascript" src="./aloha.js"></script>
+    <script src="tota11y.min.js"></script>
 
   </body>
 </html>
