--- a/index-1.html
+++ b/index-1.html
@@ -22,6 +22,7 @@
 
   <body>
     <header class="site-header">
+      <a class="screen-reader-text" href="#main">Skip to content</a>
       <div class="logo">
         <img src="images/aloha-logo.svg" alt="Aloha Apparel Co. logo" />
       </div>
@@ -49,8 +50,8 @@
         </p>
       </div>
     </section>
-
-    <section id="about" class="about container">
+    <main id="main" class="site-main" tabindex="-1">
+     <section id="about" class="about container">
       <div>
         <p class="styles heading">
           <span class="italic">Hand-Crafted</span>
@@ -63,8 +64,8 @@
           Browse our current selection of products or sign-up for updates below.
         </h3>
       </div>
-    </section>
-
+     </section>
+    </main>
     <section id="shop" class="products">
       <div>
         <ul>
@@ -88,23 +89,23 @@
 
       <div class="container heading product-all">
          <div class="product ">
-                 <img
+               <img
                  src="images/checked-stretch-dress.jpg"
                  alt="Checked Stretch Dress"
                 />
-                <h4 id="name">Dresses</h4>
-                <br />
-                <p>Checked Stretch Dress</p>
-                <br />
-                <h4>$129.00</h4>
-            </div>
+              <h4 class="title">Dresses</h4>
+              <br/>
+              <p>Checked Stretch Dress</p>
+              <br />
+              <h4>$129.00</h4>
+        </div>
 
             <div class="product">
                  <img
                     src="images/blue-hipster-backpack.jpg"
                     alt="Blue Hipster Backpack"
                 />
-                <h4 id="name">Bags</h4>
+                <h4 class="title">Bags</h4>
                 <br />
                 <p>Blue Hipster Backpack</p>
                 <br />
@@ -116,7 +117,7 @@
                  src="images/demin-overall-shorts.jpg"
                     alt="Denim Overall Shorts"
                 />
-                <h4 id="name">Denim</h4>
+                <h4 class="title">Denim</h4>
                 <br />
                 <p>Denim Overall Shorts</p>
                 <br />
@@ -125,7 +126,7 @@
 
             <div class="product">
                 <img src="images/pink-dotted-dress.jpg" alt="Pink Dotted Dress" />
-                <h4 id="name">Dresses</h4>
+                <h4 class="title">Dresses</h4>
                 <br />
                 <p>Pink Dotted Dress</p>
                 <br />
@@ -134,7 +135,7 @@
 
             <div class="product">
                 <img src="images/cotton-yellow-tshirt.jpg" alt="Yellow Cotton TShirt" />
-                <h4 id="name">T-Shirts</h4>
+                <h4 class="title">T-Shirts</h4>
                 <br />
                 <p>Yellow T-Shirt</p>
                 <br />
@@ -143,7 +144,7 @@
 
             <div class="product">
                 <img src="images/cotton-blue-shirt.jpg" alt="Blue Cotton Shirt" />
-                <h4 id="name">Button-Up Shirt</h4>
+                <h4 class="title">Button-Up Shirt</h4>
                 <br />
                 <p>Blue Cotton Shirt</p>
                 <br />
@@ -152,7 +153,7 @@
 
             <div class="product">
                 <img src="images/blue-silk-dress.jpg" alt="Blue Silk Dress" />
-                <h4 id="name">Dresses</h4>
+                <h4 class="title">Dresses</h4>
                 <br />
                 <p>Blue Silk Dress</p>
                 <br />
@@ -223,10 +224,10 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="./jquery.js"> </script>
-    <script type="text/javascript"   src="./flickity.js"> </script> 
-    <script type="text/javascript" src="./aloha.js"></script>
-    <script src="tota11y.min.js"></script>
+    <script defer type="text/javascript" src="./jquery.js"> </script>
+    <script defer type="text/javascript"   src="./flickity.js"> </script> 
+    <script defer type="text/javascript" src="./aloha.js"></script>
+    <script async src="tota11y.min.js"></script>
 
   </body>
 </html>
