compressed images substituted

--- a/index-1.html
+++ b/index-1.html
@@ -24,7 +24,7 @@
     <header class="site-header">
       <a class="screen-reader-text" href="#main">Skip to content</a>
       <div class="logo">
-        <img src="images/aloha-logo.svg" alt="Aloha Apparel Co. logo" />
+        <img src="images/cart-icon-compressor.svg" alt="Aloha Apparel Co. logo" />
       </div>
 
       <nav class="main-navigation container">
@@ -37,7 +37,7 @@
       </nav>
 
       <div class="cart">
-        <img src="images/cart-icon.svg" class="cart-img" alt="Shopping Cart" />
+        <img src="images/cart-icon-compressor.svg" class="cart-img" alt="Shopping Cart" />
       </div>
     </header>
 
@@ -90,7 +90,7 @@
       <div class="container heading product-all">
          <div class="product ">
                <img
-                 src="images/checked-stretch-dress.jpg"
+                 src="images/demin-overall-shorts-compressor.jpg"
                  alt="Checked Stretch Dress"
                 />
               <h4 class="title">Dresses</h4>
@@ -102,7 +102,7 @@
 
             <div class="product">
                  <img
-                    src="images/blue-hipster-backpack.jpg"
+                    src="images/blue-hipster-backpack-compressor.jpg"
                     alt="Blue Hipster Backpack"
                 />
                 <h4 class="title">Bags</h4>
@@ -114,7 +114,7 @@
 
             <div class="product">
                 <img
-                 src="images/demin-overall-shorts.jpg"
+                 src="images/demin-overall-shorts-compressor.jpg"
                     alt="Denim Overall Shorts"
                 />
                 <h4 class="title">Denim</h4>
@@ -125,7 +125,7 @@
             </div>
 
             <div class="product">
-                <img src="images/pink-dotted-dress.jpg" alt="Pink Dotted Dress" />
+                <img src="images/pink-dotted-dress-compressor.jpg" alt="Pink Dotted Dress" />
                 <h4 class="title">Dresses</h4>
                 <br />
                 <p>Pink Dotted Dress</p>
@@ -134,7 +134,7 @@
             </div>
 
             <div class="product">
-                <img src="images/cotton-yellow-tshirt.jpg" alt="Yellow Cotton TShirt" />
+                <img src="images/cotton-yellow-tshirt-compressor.jpg" alt="Yellow Cotton TShirt" />
                 <h4 class="title">T-Shirts</h4>
                 <br />
                 <p>Yellow T-Shirt</p>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="product">
-                <img src="images/cotton-blue-shirt.jpg" alt="Blue Cotton Shirt" />
+                <img src="images/cotton-blue-shirt-compressor.jpg" alt="Blue Cotton Shirt" />
                 <h4 class="title">Button-Up Shirt</h4>
                 <br />
                 <p>Blue Cotton Shirt</p>
@@ -152,7 +152,7 @@
             </div>
 
             <div class="product">
-                <img src="images/blue-silk-dress.jpg" alt="Blue Silk Dress" />
+                <img src="images/cotton-blue-shirt-compressor.jpg" alt="Blue Silk Dress" />
                 <h4 class="title">Dresses</h4>
                 <br />
                 <p>Blue Silk Dress</p>
